# lyingpendatabases

./: .gitignore  01_Post-2002 Fragments.py  02_DSS Colors.py  Home.py  README.md  authorship.py  db_selects.py  format_markdowns.py  format_tables.py  lp_frontpage_intro.txt  lyingpen.sqlite3  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
assets/texts/: lp_exhibit_intro.txt  lp_frontpage_intro.txt  lp_frontpage_project.txt  lp_post_intro.txt
data/: dsscolors-v1.xlsx  dsscolors-v2 2.xlsx  dsscolors-v2.xlsx  dssmaterialscribal.xlsx  exhibition-scrolls-v2.xlsx  exhibition-scrolls.xlsx  exhibition-v2.xlsx  exhibition.xlsx  post2002-sankeyvis-changeofhands.csv  post2002DB-v2-1.xlsx  post2002DB-v2-2.xlsx  post2002DB-v2.xlsx  post2002DB-v3.xlsx  post2002DB.xlsx
dbpages/: DSSexhibitions.py  DSSscribal.py  Podcast.py  Post2002.py  PosterArt.py
pages/: 01_Exhibitions.py  01_Post-2002 Fragments.py  02_About us.py  02_DSS Colors.py  02_Post-2002 Fragments.py  03_DSS Colors.py  03_DSS Exhibitions.py  03_Exhibitions.py  04_DSS Material and Scribal Features.py  Aboutus.py  DSShome.py  DSSscribal.py  Post2002.py
texts/: lp_frontpage_intro.txt
